Fixed contact mobile issues
-made icons smaller to prevent out of place look with mobile use

--- a/css/custom.css
+++ b/css/custom.css
@@ -415,11 +415,10 @@ a:active {
 
 
 @media screen and (max-width: 610px) {
-	#contact a {
-		margin-bottom:3em;
+	#contact i {
+		font-size: 2em;
 		
 	}
 
-=======
->>>>>>> origin/master
+
 }
